--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Title -->
     <title>Title</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="src/style.css" />
+    <link rel="stylesheet" type="text/css" href="src/index.css" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <!-- Device -->
     <!-- <meta name="viwport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"> -->
